syntax = "proto3";

package eurora.chat;

// Chat service definition
service ProtoChatService {
    // Send a chat request and receive a response
    rpc Chat(ProtoChatRequest) returns (ProtoChatResponse);

    // Send a chat request and receive a streaming response
    rpc ChatStream(ProtoChatRequest) returns (stream ProtoChatStreamResponse);
}

// A chat request containing messages and parameters
message ProtoChatRequest {
    // The conversation messages
    repeated ProtoBaseMessage messages = 1;

    // Request parameters
    ProtoParameters parameters = 2;
}

// A chat response
message ProtoChatResponse {
    // The AI message response
    ProtoAIMessage message = 1;

    // Usage statistics
    optional ProtoUsage usage = 2;

    // Reason why generation finished
    optional string stop_reason = 3;
}

// A streaming chat response chunk
message ProtoChatStreamResponse {
    // Incremental content
    string content = 1;

    // Whether this is the final chunk
    bool is_final = 2;

    // Usage statistics (only in final chunk)
    optional ProtoUsage usage = 3;

    // Stop reason (only in final chunk)
    optional string stop_reason = 4;

    // Tool calls (accumulated, only meaningful in final chunk)
    repeated ProtoToolCall tool_calls = 5;
}

// A unified message type that can represent any message role.
// Matches agent-chain's BaseMessage enum with Human, System, AI, Tool variants.
message ProtoBaseMessage {
    oneof message {
        ProtoHumanMessage human = 1;
        ProtoSystemMessage system = 2;
        ProtoAIMessage ai = 3;
        ProtoToolMessage tool = 4;
    }
}

// A human message in the conversation.
// Supports both simple text content and multimodal content with images.
message ProtoHumanMessage {
    // The message content (text or multipart)
    ProtoMessageContent content = 1;

    // Optional unique identifier
    optional string id = 2;
}

// A system message in the conversation.
message ProtoSystemMessage {
    // The message content (always text)
    string content = 1;

    // Optional unique identifier
    optional string id = 2;
}

// An AI message in the conversation.
message ProtoAIMessage {
    // The message content
    string content = 1;

    // Optional unique identifier
    optional string id = 2;

    // Tool calls made by the AI
    repeated ProtoToolCall tool_calls = 3;
}

// A tool message containing the result of a tool call.
message ProtoToolMessage {
    // The tool result content
    string content = 1;

    // The ID of the tool call this message is responding to
    string tool_call_id = 2;

    // Optional unique identifier
    optional string id = 3;
}

// Message content that can be either simple text or multipart.
// Matches agent-chain's MessageContent enum.
message ProtoMessageContent {
    oneof content {
        // Simple text content
        string text = 1;

        // Multiple content parts (for multimodal messages)
        ProtoContentParts parts = 2;
    }
}

// Wrapper for multiple content parts.
message ProtoContentParts {
    repeated ProtoContentPart parts = 1;
}

// A content part in a multimodal message.
// Matches agent-chain's ContentPart enum.
message ProtoContentPart {
    oneof part {
        // Text content
        ProtoTextPart text = 1;

        // Image content
        ProtoImagePart image = 2;
    }
}

// Text content part.
message ProtoTextPart {
    string text = 1;
}

// Image content part.
message ProtoImagePart {
    // Image source (URL or base64)
    ProtoImageSource source = 1;

    // Detail level for image processing (optional: "low", "high", "auto")
    optional string detail = 2;
}

// Source of an image for multimodal messages.
// Matches agent-chain's ImageSource enum.
message ProtoImageSource {
    oneof source {
        // Image from a URL
        string url = 1;

        // Base64-encoded image data
        ProtoBase64Image base64 = 2;
    }
}

// Base64-encoded image data.
message ProtoBase64Image {
    // MIME type (e.g., "image/jpeg", "image/png")
    string media_type = 1;

    // Base64-encoded image data (without data URL prefix)
    string data = 2;
}

// A tool call made by the AI model.
// Matches agent-chain's ToolCall struct.
message ProtoToolCall {
    // Unique identifier for this tool call
    string id = 1;

    // Name of the tool to call
    string name = 2;

    // Arguments for the tool call as a JSON string
    string args = 3;
}

// Common parameters used across providers
message ProtoParameters {
    // Controls randomness in the response (0.0 to 2.0)
    optional float temperature = 1;

    // Maximum number of tokens to generate
    optional uint32 max_tokens = 2;

    // Nucleus sampling parameter (0.0 to 1.0)
    optional float top_p = 3;

    // Top-k sampling parameter
    optional uint32 top_k = 4;

    // Sequences where the API will stop generating further tokens
    repeated string stop_sequences = 5;

    // Frequency penalty (-2.0 to 2.0)
    optional float frequency_penalty = 6;

    // Presence penalty (-2.0 to 2.0)
    optional float presence_penalty = 7;
}

// Usage statistics for a request
message ProtoUsage {
    // Number of tokens in the prompt
    uint32 input_tokens = 1;

    // Number of tokens in the completion
    uint32 output_tokens = 2;

    // Total number of tokens used
    uint32 total_tokens = 3;
}
